--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # === Set the project name and specify the required CMAKE version.
-project (pipeline CXX C)
+project (calibration-pipeline CXX C)
 cmake_minimum_required (VERSION 2.8)
 
 
