improve versioning info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,14 @@ option (ENABLE_TESTS "Enable test framework" OFF)
 
 if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE "RelWithDebInfo")
+  set (CMAKE_ALL_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
 endif (NOT CMAKE_BUILD_TYPE)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+  set (CMAKE_ALL_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE})
+elseif (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set (CMAKE_ALL_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG})
+endif (CMAKE_BUILD_TYPE STREQUAL "Release")
 
 if (ENABLE_PROFILING)
   set (CMAKE_BUILD_TYPE "Release")
