--- a/cmake/version.h.in
+++ b/cmake/version.h.in
@@ -1,4 +1,6 @@
-#define NAME "@PROJECT_NAME@"
-#define BUILD "@CMAKE_BUILD_TYPE@"
-#define VERSION "@VERSION@"
-#define HUMAN_NAME NAME " v" VERSION " (" __DATE__ ")"
+#define CALIBRATION_NAME "@PROJECT_NAME@"
+#define CALIBRATION_BUILD "@CMAKE_BUILD_TYPE@"
+#define CALIBRATION_VERSION "@VERSION@"
+#define CALIBRATION_COMPILER "@CMAKE_CXX_COMPILER@"
+#define CALIBRATION_FLAGS "@CMAKE_ALL_FLAGS@"
+#define CALIBRATION_HUMAN_NAME CALIBRATION_NAME " v" CALIBRATION_VERSION " (" __DATE__ ")"
